    fix File Search|Content|Case Sensitive checkbox function inverted #276
    added and documented socket method run-task #224
    run_in_terminal and edit_file deprecated yet left-in
    list double-click activates in app chooser
    mount webdav shares in terminal for password entry - udevil issue 21
    use mouse buttons 6,7 as back,forward in addition to 4,5 8,9 #279
0.8.6   2013-02-13:
    fix cannot create directory or file on CentOS #253
    update russian translation
    case insensitive sort on Type, Owner columns
    move debian/ to distros/debian/ and update README
    Enter clicks Set, Esc twice clicks Unset in Set Key dialog
    added manual GUI|Find-As-You-Type Search
    New File/Folder/Link enabled if no write access for As Root
    fix cannot unset plugin key combo assignment
    added configure option --with-gtk2 to force gtk2 only build
    mount curlftpfs in terminal for password entry #251
    update custom protocol handler script in manual to use run_in_terminal
    mouse back/fwd buttons work anywhere in window
    don't show empty (all items context hidden) custom submenus #215
    path bar tab completion reworked, sorted
    added path bar option Auto Seek
    path bar unquote quoted paths
    path bar cmd history in completion popup
    path bar instance-wide cmd history
    path bar breadcrumbs on click no ctrl
    path bar limit/extend keys eaten
    un/select bookmarks and devices on change dir #259
    Russian translation updated
    status bar show selected/visible
    debian build-from-source packages optimize CFLAGS=-O2
    new link use target of current selected file #112
    context dialog value combo popup width #43
0.8.5   2013-01-14:
    fix left-click ignored in Open context submenu #31 #228
    Dialog fix progress bar; add auto-pulse
    [gtk3] task progress pulse don't show percent
    debian package add XXXXXXXX to mktemp template [dist]
    add key shortcut labels to Prefs default drag action